# scraping-news

./: Makefile  README.md  alembic.ini  docker-compose.yaml  env.env  pyproject.toml
src/: main.py  settings.py
src/application/article/: article_error.py  article_service.py
src/crawlers/: request_utils.py  selenium_manager.py  splash_service.py  timesofmalta_crawler.py
src/data/db_orm/: connection.py  init_database.py  init_db.py  migrations.py  populate_db.py  query_obj.py
src/data/db_orm/alembic/versions/: 5d2b2eeadb75_.py
src/data/db_orm/tables/: __init__.py  tbl_articles.py
src/data/dtos/: articles_dto.py
src/data/repository/: articles_repository.py
src/domain/: article.py
src/utils/: date_utils.py  email_utils.py  path_utils.py  sheets_utils.py
