[tool.poetry]
name = "task-growth"
version = "0.1.0"
description = ""
authors = ["toriium <zezim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
turbocrawler = "^0.0.2rc1"
pydantic = "^2.6.3"
requests = "^2.31.0"
parsel = "^1.8.1"
selenium = "^4.18.1"
selenium-toolkit = "^0.0.6"
sqlalchemy = "^2.0.27"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
pandas = "^2.2.1"
openpyxl = "^3.1.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.0"

[tool.ruff]
line-length = 120
target-version = "py311"

select = [
    "B", # flake8-bugbear
    "BLE", # flake8-blind-except
    "C4", # comprehensions
#    "D", # pydocstyle
    "E", # pycodestyle
    "F", # pyflakes
    "I", # isort
    "ICN", # flake8-import-conventions
    "ISC", # flake8-implicit-str-concat
    "PGH", # pygrep-hooks
    "PLC", # pylint
    "PLE", # pylint
    "PLR", # pylint import style
    "PLW", # pylint
    "RET", # flake8-return
    "RUF", # ruff-specific rules
    "SIM", # flake8-simplify
    "T10", # flake8-debugger
    "T20", # flake8-print
    "TID", # flake8-tidy-imports
    "UP", # pyupgrade
    "W", # pycodestyle
    "YTT", # flake8-2020

]
ignore = []

fixable = ["A", "B", "C", "D", "E", "F", "I", "UP007"]
unfixable = []

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
